--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,11 +1,45 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0 0;
+    height: 100vh;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto 1fr 1fr 1fr ;
+    grid-template-areas: "header header header"
+                         "main main main"
+                         "main main main"
+                         "footer footer footer";
+}
+
 header {
-    h1 {
-        color: gold;
-        @media (min-width: 600px) {
-            color:red
-        }
-      
-    }
+    grid-area: header;
+    background-color: red;
+    display: flex;
+    justify-content: flex-end;
 
+}
 
+nav {
+    grid-area: nav;
+    background-color: grey;
+    height: 50px;
+    width: 50px;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    margin-right: 1vw;
+}
+
+main {
+    grid-area: main;
+    background-color: green;
+
+}
+
+footer {
+    grid-area: footer;
+    background-color: blue;
 }
