--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,30 +1,27 @@
 
 @import url(./reset.scss);
+@import url(./header.scss);
+@import url(./homepage.scss);
 
 * {
     box-sizing: border-box;
+    color: #fbf5f3;
 }
 
 body {
+    background-color: #464744;
     margin: 0 0;
     height: 100vh;
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto 1fr 1fr 1fr ;
+    grid-template-rows: auto auto auto 1fr ;
     grid-template-areas: "header header header"
                          "main main main"
                          "main main main"
                          "footer footer footer";
 }
 
-header {
-    grid-area: header;
-    background-color: red;
-    display: flex;
-    justify-content: flex-end;
-
-}
 
 nav {
     grid-area: nav;
@@ -37,12 +34,18 @@ nav {
 }
 
 main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     grid-area: main;
-    background-color: green;
+    // background-color: green;
+
 
 }
 
 footer {
     grid-area: footer;
     background-color: blue;
+
 }
