--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -9,3 +9,102 @@ header {
     width: auto;
 
 }
+
+.items__link{
+    list-style-type: none;
+    color: #464744;
+    font-family: 'Playfair Display SC', serif;
+    margin: 3vh 0;
+  }
+
+.menu__container{
+ position: fixed;
+ top:0;
+ left:0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  font-size: 2em;
+}
+
+.menu__burger{
+  width: max-content;
+  position:relative;
+  &:hover{
+    cursor: pointer;
+  }
+  .bars{
+    position: relative;
+    display: block;
+    background: #fbf5f3;
+    height: 5px;
+    width: 30px;
+    border-radius: 35px;
+    margin: 11px;
+    transition: transform .5s, opacity .5s;
+  }
+  .bars:nth-of-type(2){
+    position: absolute;
+    bottom: 8px;
+  }
+  .bars:nth-of-type(3){
+    position: absolute;
+    bottom: 8px;
+  }
+}
+
+.menu__burger.active{
+  .bars:nth-of-type(1){
+    opacity: 0;
+  }
+  .bars:nth-of-type(2){
+    transform: rotate(-45deg);
+  }
+  .bars:nth-of-type(3){
+    transform: rotate(45deg);
+  }
+  .bars:nth-of-type(4){
+    opacity: 0;
+  }
+}
+
+.menu__items{
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
+  margin: 0;
+  opacity: 0;
+  left: 0;
+  background: #bebeea ;
+
+  border-radius: 3px;
+  z-index: -1;
+  font-size: .8em;
+  transition: opacity .8s;
+  li{
+    margin: 10px 0;
+    i{
+      margin-right: 20px;
+    }
+    &:hover{
+      cursor: pointer;
+      opacity: .8;
+    }
+  }
+}
+
+.menu__items.active{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 70vw;
+  height: 100vh;
+  opacity: 1;
+  transition: opacity .8s;
+
+}
+
+
