--- a/src/styles/creator.scss
+++ b/src/styles/creator.scss
@@ -13,7 +13,7 @@
     background-color: rgba($color: #bebeea, $alpha: 0.7) ;
   text-align: center;
   width: 80%;
-  margin-bottom: 2vh;
+  margin: 2vh 0;
 }
 
 .creator__summary {
