[setup] add import for chair.scss

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,6 +3,7 @@
 @import url(./header.scss);
 @import url(./homepage.scss);
 @import url(./creator.scss);
+@import url(./chair.scss);
 
 * {
     box-sizing: border-box;
