[update] add production.scss import

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,6 +4,7 @@
 @import url(./homepage.scss);
 @import url(./creator.scss);
 @import url(./chair.scss);
+@import url(./production.scss);
 
 * {
     box-sizing: border-box;
