--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -26,6 +26,15 @@ body {
                          "footer footer footer";
 }
 
+section {
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
 
 main {
     display: flex;
