--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -1,3 +1,5 @@
+
+
 .homepage {
     height: 100vh;
     width: 80%;
@@ -9,14 +11,14 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+
+    @include medium {
+        background-size: 30%;
+    }
     
 }
 
-.homepage__background{
-    height: 75vw;
-    width: 75vw;
-   
-}
+
 
 .homepage__title {
     font-size: 200%;
