--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -11,7 +11,10 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
-
+   
+    @media (min-width : 600px){
+        background-size: auto;
+    }
 }
 
 
