--- a/src/styles/production.scss
+++ b/src/styles/production.scss
@@ -7,6 +7,12 @@
   text-align: center;
   width: 80%;
   margin: 2vh 0;
+
+  @media (min-width: 730px) {
+   
+    width: auto;
+}
+
 }
 
 .production div {
@@ -14,11 +20,22 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+
+    @media (min-width:1000px) {
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+    }
 }
+
 .production__image {
-    height: 50vh;
+    height: 45vh;
     width: auto;
     margin: 3vh 0;
+
+    @media (min-width:1000px) {
+        height: 55vh;
+    }
 }
 
 .production__text {
@@ -26,4 +43,8 @@
     width: 80%;
     line-height:1.1;
     margin-bottom:  2vh;
+
+    @media (min-width:1000px) {
+        width: 30%;
+    }
 }
