--- a/src/styles/use.scss
+++ b/src/styles/use.scss
@@ -5,6 +5,10 @@
   text-align: center;
   width: 80%;
   margin: 2vh 0;
+  @media (min-width: 730px) {
+   
+    width: auto;
+}
 }
 
 .use div {
@@ -12,12 +16,23 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+
+    @media (min-width:1000px) {
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+    }
 }
 
 .use__image {
-    height: 50vh;
+    height: 45vh;
     width: auto;
     margin: 3vh 0;
+
+    @media (min-width:1000px) {
+        height: 55vh;
+    }
+
 }
 
 .use__text {
@@ -25,4 +40,8 @@
     width: 80%;
     line-height:1.1;
     margin-bottom:  2vh;
+
+    @media (min-width:1000px) {
+        width: 30%;
+    }
 }
