--- a/src/styles/chair.scss
+++ b/src/styles/chair.scss
@@ -54,13 +54,23 @@
 .images__element {
     height: 20vh;
     width: 20vh;
+    
 
     @media (min-width: 930px) {
-        
+        filter: grayscale(100%);
         height: 30vh;
         width: 30vh;
       
     }
+}
+
+@media (min-width: 930px) {
+        
+   .images__element:hover {
+       filter: grayscale(0%);
+       transition-duration: 1s;
+   }
+  
 }
 
 .chair__data {
@@ -88,3 +98,4 @@
     width: 80%;
     line-height:1.1;
 }
+
