--- a/src/styles/creator.scss
+++ b/src/styles/creator.scss
@@ -45,6 +45,21 @@
     
 }
 
+.creator__summary:hover {
+    background-color: rgba($color: #fbf5f3, $alpha : 0.5) ;
+    transition-duration: 2s;
+
+.summary__name {
+    color: #464744;
+    transition-duration: 1s;
+}
+
+.summary__bio {
+    color: #464744;
+    transition-duration: 1s;
+}
+
+}
 .summary__image {
     height: 35vh;
     width: 35vh;
